tests/transpiler/x/kt/slice.kt
// Mochi 0.10.31 - generated 2025-07-19 13:22:36 UTC
fun main() {
    println(mutableListOf(1, 2, 3).subList(1, 3))
    println(mutableListOf(1, 2, 3).subList(0, 2))
    println("hello".subList(1, 4))
}
